--- a/eBook Library Service/Views/Shared/_AccountLayout.cshtml
+++ b/eBook Library Service/Views/Shared/_AccountLayout.cshtml
@@ -59,7 +59,7 @@
                             <a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                             <ul>
                                 <li><a href="/Book/UserIndex">THE LIBRARY</a></li>
-                                <li><a href="/Payment/PurchaseHistory">MY BOOKS</a></li>
+                                <li><a href="/Book/BorrowHistory">MY BOOKS</a></li>
 
                             </ul>
                         </li>
